# geointerpo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml  publish.yml
configs/: air_quality_live.yml  calgary.yml  temperature.yml
docs/: boundaries.md  examples.md  faq.md  index.md  install.md  interpolators.md  pipeline.md  quickstart.md
docs/api/: interpolators.md  sources.md  validation.md
docs/stylesheets/: extra.css
examples/: calgary_demo.py  quickstart.py
geointerpo/: __init__.py  boundaries.py  cli.py  covariate.py  demo.py  io.py  pipeline.py  viz.py  viz_interactive.py
geointerpo/data/: __init__.py  samples.py
geointerpo/interpolators/: __init__.py  base.py  cokriging.py  griddata.py  idw.py  kriging.py  ml.py  natural_neighbor.py  rbf.py  regression_kriging.py  sgs.py  spline.py  trend.py
geointerpo/sources/: __init__.py  base.py  era5.py  meteostat.py  nasapower.py  openaq.py  openmeteo.py
geointerpo/validation/: __init__.py  gee_validator.py  metrics.py
notebooks/: 01_temperature.ipynb  02_precipitation.ipynb  03_air_quality.ipynb
notebooks/.cache/: openmeteo.sqlite
notebooks/outputs/air_quality/: cv_metrics.csv  gbm.tif  idw.tif  kriging.tif  rf.tif
notebooks/outputs/precipitation/: cv_metrics.csv  idw.tif  kriging.tif  rbf.tif  spline.tif
notebooks/outputs/temperature/: cv_metrics.csv  idw.tif  kriging.tif  natural_neighbor.tif  spline.tif
site/: 404.html  index.html  sitemap.xml
site/api/interpolators/: index.html
site/api/sources/: index.html
site/api/validation/: index.html
site/boundaries/: index.html
site/examples/: index.html
site/faq/: index.html
site/install/: index.html
site/interpolators/: index.html
site/pipeline/: index.html
site/quickstart/: index.html
site/search/: search_index.json
tests/: test_boundaries.py  test_comprehensive.py  test_improvements.py  test_interpolators.py  test_pipeline_data.py
