[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geointerpo"
version = "0.2.0"
description = "Spatial interpolation toolkit — boundaries, point data, 18 methods, export, and validation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Homayoun Rezaie", email = "homayounrezaie@gmail.com" }]
keywords = ["geostatistics", "interpolation", "kriging", "spatial", "idw", "weather", "air-quality"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core — interpolation + boundaries + IO + validation.
# All optional heavy libs (kriging, ML, raster, data APIs) are extras.
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.6",
    "xarray>=2023.1",
    "pandas>=2.0,<2.3",
    "pyyaml>=6.0",
    "requests>=2.31",    # used by boundaries (Nominatim) and HTTP-based data sources
]

[project.optional-dependencies]
# Kriging and ML interpolation
kriging = [
    "pykrige>=1.7",
    "scikit-learn>=1.3",
]
# Raster I/O (GeoTIFF export and boundary clipping)
raster = [
    "rasterio>=1.3",
    "rioxarray>=0.15",
]
# Live data source adapters (weather + air quality APIs)
data = [
    "meteostat>=1.6",
    "requests-cache>=1.1",
    "retry-requests>=2.0",
    "openmeteo-requests>=1.2",
    "openaq>=0.7",
    "tqdm>=4.65",
]
# Static visualization helpers (matplotlib only)
viz = [
    "matplotlib>=3.7",
]
# Interactive visualization (plotly or leafmap)
interactive = [
    "plotly>=5.0",
]
# Location geocoding (named-location backward-compat, Nominatim uses requests)
geo = [
    "geopy>=2.4",
]
# SRTM elevation covariate
dem = [
    "srtm.py>=0.3.5",
]
# Advanced geostatistics — cokriging + sequential Gaussian simulation
geostat = [
    "gstools>=1.4",
]
# Uncertainty quantification for ML interpolators
uncertainty = [
    "mapie>=0.6",
]
# ERA5 reanalysis data — requires CDS account + ~/.cdsapirc setup
era5 = [
    "cdsapi>=0.7",
]
# Recommended install — everything a data scientist needs
full = [
    "pykrige>=1.7",
    "scikit-learn>=1.3",
    "rasterio>=1.3",
    "rioxarray>=0.15",
    "meteostat>=1.6",
    "requests-cache>=1.1",
    "retry-requests>=2.0",
    "openmeteo-requests>=1.2",
    "openaq>=0.7",
    "tqdm>=4.65",
    "matplotlib>=3.7",
    "plotly>=5.0",
    "geopy>=2.4",
    "srtm.py>=0.3.5",
    "gstools>=1.4",
    "mapie>=0.6",
]
# Interactive notebooks — heavy optional tools kept out of the core library
notebooks = [
    "matplotlib>=3.7",
    "plotly>=5.0",
    "leafmap>=0.30",
    "geemap>=0.30",
    "jupyter",
    "ipykernel",
    "nbformat",
]
# Dev tooling — full + notebooks + testing
dev = [
    "pykrige>=1.7",
    "scikit-learn>=1.3",
    "rasterio>=1.3",
    "rioxarray>=0.15",
    "meteostat>=1.6",
    "requests-cache>=1.1",
    "retry-requests>=2.0",
    "openmeteo-requests>=1.2",
    "openaq>=0.7",
    "tqdm>=4.65",
    "matplotlib>=3.7",
    "plotly>=5.0",
    "geopy>=2.4",
    "srtm.py>=0.3.5",
    "gstools>=1.4",
    "mapie>=0.6",
    "leafmap>=0.30",
    "jupyter",
    "ipykernel",
    "pytest>=7",
    "pytest-cov",
    "ruff",
    "build",
]

[project.scripts]
geointerpo = "geointerpo.cli:main"

[project.urls]
Repository = "https://github.com/homayounrezaie/geointerpo"

[tool.hatch.build.targets.wheel]
packages = ["geointerpo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "network: marks tests that require network access (deselect with -m 'not network')",
    "gee: marks tests that require Google Earth Engine auth (deselect with -m 'not gee')",
]

[tool.ruff]
line-length = 100
target-version = "py39"
